<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.sty</groupId>
    <artifactId>fileserv-parent</artifactId>
    <version>0.1.4-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>fileserv-parent</name>
    <description>Parent POM for fileserv multi-module project</description>

    <modules>
        <module>fileserv-core</module>
        <module>fileserv-auth-dummy</module>
        <module>fileserv-auth-file</module>
        <module>fileserv-auth-ldap</module>
        <module>fileserv-app</module>
        <module>fileserv-test-webdav</module>
        <module>fileserv-test-generate-hierarchy</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <jetty.version>12.1.5</jetty.version>
        <slf4j.version>2.0.17</slf4j.version>

        <bcrypt.version>0.4</bcrypt.version>
        <bouncycastle.version>1.82</bouncycastle.version>

        <picocli.version>4.7.6</picocli.version>

        <junit.jupiter.version>5.11.3</junit.jupiter.version>
        <assertj.version>3.26.3</assertj.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-ldap</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-dummy</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-file-plaintext</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-file-bcrypt</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-file-smb</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>de.sty</groupId>
                <artifactId>fileserv-auth-file-smb-utils</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-server</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-security</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-util</artifactId>
                <version>${jetty.version}</version>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty.ee10</groupId>
                <artifactId>jetty-ee10-servlet</artifactId>
                <version>${jetty.version}</version>

            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mindrot</groupId>
                <artifactId>jbcrypt</artifactId>
                <version>${bcrypt.version}</version>
            </dependency>
            <dependency>
                <groupId>org.bouncycastle</groupId>
                <artifactId>bcutil-jdk18on</artifactId>
                <version>${bouncycastle.version}</version>
            </dependency>

            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli</artifactId>
                <version>${picocli.version}</version>
            </dependency>


            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.jupiter.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${assertj.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <release>${maven.compiler.source}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                    <configuration>
                        <useModulePath>false</useModulePath>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <propertiesEncoding>UTF-8</propertiesEncoding>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
